--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">CodingSchool</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="title_home">Home</string>
 
@@ -14,8 +15,8 @@
     <string name="bottom_home">@string/title_home</string>
     <string name="bottom_lecture">Lecture</string>
     <string name="bottom_cs">CS</string>
-    <string name="title_activity_splash">SplashActivity</string>
-    <string name="title_activity_login">Sign in</string>
+
+    <string name="title_activity_login">Login</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -25,4 +26,9 @@
     <string name="error_invalid_password">Password 규격에 적합하지 않습니다.</string>
     <string name="error_incorrect_password">Email 또는 Password 인증에 실패하였습니다.</string>
     <string name="error_connect_server">서버 연결에 오류가 발생하였습니다.</string>
+
+    <string name="signout_message">로그 아웃 하시겠습니까?</string>
+    <string name="positive_button">OK</string>
+    <string name="negative_button">Cancel</string>
+
 </resources>
