--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,30 @@
     <string name="positive_button">확인</string>
     <string name="negative_button">취소</string>
 
+    <!-- Drawer : activity_main_drawer.xml -->
+    <string name="drawer_edu_center">Edu Center</string>
+    <string name="drawer_lecture_progress">Lecture Progress</string>
+    <string name="drawer_lecture_reviews">Lecture Reviews</string>
+    <string name="drawer_course_overviews">Course Overviews</string>
+    <string name="drawer_notice">Notice</string>
+    <string name="drawer_all">All</string>
+    <string name="drawer_my_messages">My Messages</string>
+    <string name="drawer_public_notices">Public Notices</string>
+    <string name="drawer_community">Community</string>
+    <string name="drawer_cs">CS</string>
+    <string name="drawer_blog">Blog</string>
+    <string name="drawer_instagram">Instagram</string>
+    <string name="drawer_facebook">Facebook</string>
+    <string name="drawer_help">Help</string>
+    <string name="drawer_me">Me</string>
+    <string name="drawer_account">Account</string>
+    <string name="drawer_purchases">Purchases</string>
+    <string name="drawer_terms_privacy">Terms/Privacy</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="drawer_logout">Logout</string>
+
+    <!-- Fragment -->
+    <string name="fragment_home">HOME Fragment</string>
+    <string name="fragment_lecture">LECTURE Fragment</string>
+
 </resources>
